yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: home
  template:
    metadata:
      labels:
        name: home
    spec:
      containers:
      - name: home
        image: docker.io/freegroup/thindexed-home:0.1.0-36
