yaml/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home
spec:
  hosts: ["app.<DOMAIN>"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          exact: "/home"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: home
